--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ script:
   - ./get_code_cov.sh >/dev/null
   - codecov >/dev/null
   # SLOCcount
-  - cd ..; sloccount --overhead 1 --personcost 22614 $my_github; cd $my_github
+  - cd ..; sloccount --overhead 1 --personcost 22614 korter_project; cd korter_project
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
