--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 language: cpp
-
+dist: xenial
 compiler:
   - gcc
 
@@ -42,11 +42,16 @@ install:
   # OCLint
   - ./install_oclint.sh
 
-# Start virtual X server, from https://docs.travis-ci.com/user/gui-and-headless-browsers/
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+# Xenial
+services:
+  - xvfb
+
+# Trusty
+# Start virtual X server
+# before_script:
+#  - "export DISPLAY=:99.0"
+#  - "sh -e /etc/init.d/xvfb start"
+#  - sleep 3 # give xvfb some time to start
 
 script: 
   - ./download_other_githubs.sh
