--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: xenial
 compiler: gcc
 sudo: required
 
-# Xenial
 services:
   - xvfb
 
@@ -12,41 +11,21 @@ addons:
   apt: 
     packages: libboost-all-dev
 
-before_install:
-  # C++14
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-  # Qt5, From https://gist.github.com/jreese/6207161#gistcomment-1462109
-  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - sudo apt-get update -qq
-  # codecov
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo pip install codecov # From https://github.com/travis-ci/travis-ci/issues/1705
-  - sudo apt-get update -qq
 
 install: 
-  # C++14
-  - sudo apt-get install -qq g++-5
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
   # Qt5
-  - sudo apt-get install -qq libqt5webkit5-dev qtdeclarative5-dev libqt5svg5*
-  - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
+  - sudo apt-get install -qq qt5-qmake qt5-default
+  - sudo apt-get install -qq libqt5svg5-dev
+  # Qwt
+  - sudo apt-get install -qq libqwt-qt5-dev
   # cppcheck
   - sudo apt-get install -qq cppcheck
   # Codecov
-  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
   - sudo pip install codecov
   # SLOCcount
   - sudo apt-get install sloccount
   # OCLint
   - ./install_oclint.sh
-
-# Trusty
-# Start virtual X server
-# before_script:
-#  - "export DISPLAY=:99.0"
-#  - "sh -e /etc/init.d/xvfb start"
-#  - sleep 3 # give xvfb some time to start
 
 script: 
   - ./download_other_githubs.sh
